RESOLVED FIXED109740
Fix debug assertion being triggered
https://bugs.webkit.org/show_bug.cgi?id=109740
Summary Fix debug assertion being triggered
Shawn Singh
Reported 2013-02-13 13:07:34 PST
A debug assertion in RenderLayer.h is being hit when trying to access the normalFlowList when it is dirty. Most likely this is caused by a new recursion that I added in , but I overlooked the need to call updateLayerListsIfNeeded() recursively as well. Patch coming in a moment. I'll ask for review later, after having a chance to verify that it stops triggering the assertion.
Attachments
Patch (2.57 KB, patch)
2013-02-13 13:26 PST, Shawn Singh
no flags
Shawn Singh
Comment 1 2013-02-13 13:26:34 PST
Simon Fraser (smfr)
Comment 2 2013-02-13 13:45:41 PST
I see an assertion about dirty z-order lists in a hit testing code path when bringing up the inspector too. Probably unrelated, but would be nice to fix.
Shawn Singh
Comment 3 2013-02-13 15:06:06 PST
Comment on attachment 188166 [details] Patch Didn't reproduce any debug assertion on chromium's inspector. I'm building debug webkit now to try there - is there something specific that has to be done to reproduce the assertion?
WebKit Review Bot
Comment 4 2013-02-13 15:45:39 PST
Comment on attachment 188166 [details] Patch Clearing flags on attachment: 188166 Committed r142815: <http://trac.webkit.org/changeset/142815>
WebKit Review Bot
Comment 5 2013-02-13 15:45:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.